aparecen gatos y categorias

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Flickr Photo Search</h1>
             <form>
               <label for="search">Type a search term</label>
-              <input type="search" name="search" id="search">
+              <select id="desplegable"></select>
               <input type="submit" value="Search" id="submit">
                   
             </form>
