--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div id="botonAtras"></div>
             </div>
             <div class="col-sm-3">
-                <div id="numeros"></div>
+                <ul class="pagination">
+                </ul>
             </div>
             <div class="col-sm-2">
                 <div id="botonSiguiente"></div>
